Fix: Removed submodule from public folder

--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
                     Passionate about clean code and innovative technology.
                 </p>
                 <div class="hero-buttons">
-                    <a href="assets/resume.pdf" class="btn btn-primary" download>
+                    <a href="AdityaResume.pdf" class="btn btn-primary" download>
                         <span>Download Resume</span>
                         <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
@@ -347,10 +347,7 @@
                     </div>
                 </div>
             </div>
-            <div class="footer-bottom">
-                <p>&copy; 2024 Aditya. All rights reserved.</p>
-                <a href="assets/resume.pdf" class="btn btn-outline" download>Download Resume</a>
-            </div>
+           
         </div>
     </footer>
 
