Project page is updated

--- a/projects.html
+++ b/projects.html
@@ -257,7 +257,7 @@
     <nav class="navbar" id="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <a href="index.html">YourName</a>
+                <a href="index.html">Aditya Bhone</a>
             </div>
             <ul class="nav-menu" id="nav-menu">
                 <li class="nav-item">
