project details is updated

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Professional portfolio website showcasing software engineering projects and skills">
     <meta name="keywords" content="portfolio, software engineer, developer, web development, projects">
     <meta name="author" content="Your Name">
-    <title>Your Name - Software Engineer</title>
+    <title>Aditya Bhone - Software Engineer</title>
     
     <!-- Preload fonts -->
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" as="style">
